--- a/Jupyter_Notebooks/Exercise6.ipynb
+++ b/Jupyter_Notebooks/Exercise6.ipynb
@@ -22,13 +22,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a float\n"
+     ]
+    }
+   ],
    "source": [
     "new_word = 3.14\n",
     "\n",
-    "if"
+    "if isinstance(new_word, str):\n",
+    "    print(\"This is a string\")\n",
+    "elif isinstance(new_word, int):\n",
+    "    print(\"This is an integer\")\n",
+    "elif isinstance(new_word, float):\n",
+    "    print(\"This is a float\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age = input(\"What is the age of the visitor? \")\n",
+    "\n",
+    "if int(age) <= 5:\n",
+    "    print(\"Admission is free!\")\n",
+    "elif int(age) >= 6 and int(age) < 12:\n",
+    "    print(\"Admission is $6\")\n",
+    "else:\n",
+    "    print(\"Admission is $12\")"
    ]
   }
  ],
@@ -39,8 +68,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
    "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.9"
   }
  },
